Added some plots to the results and reworded some statements on the objective

--- a/Code/Explore_matrix.ipynb
+++ b/Code/Explore_matrix.ipynb
@@ -422,6 +422,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Behaviour of $f_\\text{nuc}$\n",
+    "\n",
+    "\n",
+    "Idea ist that we want to show how the function behaves if we change the size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_nuc = lambda s: np.sum(s)/np.max(s)\n",
+    "f_nucf = lambda s: np.sum(s)/np.linalg.norm(s)\n",
+    "\n",
+    "h = np.arange(1,700,10)\n",
+    "w = np.arange(1,700,10)\n",
+    "\n",
+    "A = mats[0]\n",
+    "fs = np.zeros((len(h),len(w)))\n",
+    "fsf = np.zeros((len(h),len(w)))\n",
+    "for index, x in np.ndenumerate(fs):\n",
+    "    s = np.linalg.svd(A[:h[index[0]],:w[index[1]]],compute_uv=False)\n",
+    "    fs[index] = f_nuc(s)\n",
+    "    fsf[index] = f_nucf(s)\n",
+    "#fs = [f_nuc(np.linalg.svd(A[:a,:b],compute_uv=False)) for v in vs]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.contourf(fs)\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.contourf(fsf)\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs_flatten = fs.reshape(-1)\n",
+    "size_faltten = (h.reshape(-1,1)*w.reshape(1,-1)).reshape(-1)\n",
+    "\n",
+    "plt.scatter(np.sqrt(size_faltten),fs_flatten)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fsf_flatten = fsf.reshape(-1)\n",
+    "size_faltten = (h.reshape(-1,1)*w.reshape(1,-1)).reshape(-1)\n",
+    "\n",
+    "plt.scatter(np.sqrt(size_faltten),fsf_flatten)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
