--- a/Code/Tests/Plot_examples_move.ipynb
+++ b/Code/Tests/Plot_examples_move.ipynb
@@ -39,6 +39,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.cumsum([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dims_in =  np.array([6, 3, 5, 2])*3\n",
     "dims_out = np.array([2, 5, 3, 6])*3\n",
     "\n",
@@ -83,25 +92,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cost_error_cut_rel(s,shape,s_a,shape_a):\n",
-    "    tau = 0.9\n",
-    "    c = np.sum(s[s<tau*np.max(s)]**2)/(shape[0]*shape[1])+\\\n",
-    "        np.sum(s_a[s_a<tau*np.max(s_a)]**2)/(shape_a[0]*shape_a[1])\n",
-    "    #print(\"s:\",s[s<tau*np.max(s)],\" s_a:\",s_a[s_a<tau*np.max(s_a)])\n",
-    "    return c\n",
-    "\n",
-    "\n",
-    "def cost_nuc(s,shape,s_a,shape_a):\n",
+    "def cost_nuc(s,s_a):\n",
     "    tau = 0.9\n",
     "    c = np.sum(s)/np.max(s)+\\\n",
-    "        np.sum(s_a)/np.max(s)\n",
+    "        np.sum(s_a)/np.max(s_a)\n",
     "    #print(\"s:\",s[s<tau*np.max(s)],\" s_a:\",s_a[s_a<tau*np.max(s_a)])\n",
     "    return c\n",
     "\n",
     "m_in=[4,2,1,1]\n",
     "m_out=[4,2,1,1]\n",
     "\n",
-    "sys_move,input_dims,output_dims = move.move(system,4,cost_error_cut_rel,m_in = m_in,m_out=m_out)\n",
+    "sys_move,input_dims,output_dims,fs = move.move(system,None,cost_nuc,m_in = m_in,m_out=m_out)\n",
     "\n",
     "print(dims_in)\n",
     "print(np.array(sys_move.dims_in))\n",
@@ -251,6 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the fraction of the textwidt for tex\n",
     "bbox.width/w"
    ]
   },
@@ -261,6 +263,15 @@
    "outputs": [],
    "source": [
     "np.cumsum(input_dims,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(fs)"
    ]
   },
   {
