--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -583,3 +583,32 @@ date = {2019-03-21}
 	langid = {english},
 	file = {Recht et al. - 2010 - Guaranteed Minimum-Rank Solutions of Linear Matrix.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/9QCZ7XD7/Recht et al. - 2010 - Guaranteed Minimum-Rank Solutions of Linear Matrix.pdf:application/pdf},
 }
+
+@article{liu_interior-point_2010,
+	title = {Interior-Point Method for Nuclear Norm Approximation with Application to System Identification},
+	volume = {31},
+	issn = {0895-4798},
+	doi = {10.1137/090755436},
+	abstract = {The nuclear norm (sum of singular values) of a matrix is often used in convex heuristics for rank minimization problems in control, signal processing, and statistics. Such heuristics can be viewed as extensions of \${\textbackslash}ell\_1\$-norm minimization techniques for cardinality minimization and sparse signal estimation. In this paper we consider the problem of minimizing the nuclear norm of an affine matrix-valued function. This problem can be formulated as a semidefinite program, but the reformulation requires large auxiliary matrix variables, and is expensive to solve by general-purpose interior-point solvers. We show that problem structure in the semidefinite programming formulation can be exploited to develop more efficient implementations of interior-point methods. In the fast implementation, the cost per iteration is reduced to a quartic function of the problem dimensions and is comparable to the cost of solving the approximation problem in the Frobenius norm. In the second part of the paper, the nuclear norm approximation algorithm is applied to system identification. A variant of a simple subspace algorithm is presented in which low-rank matrix approximations are computed via nuclear norm minimization instead of the singular value decomposition. This has the important advantage of preserving linear matrix structure in the low-rank approximation. The method is shown to perform well on publicly available benchmark data.},
+	pages = {1235--1256},
+	number = {3},
+	journaltitle = {{SIAM} Journal on Matrix Analysis and Applications},
+	shortjournal = {{SIAM} J. Matrix Anal. Appl.},
+	author = {Liu, Zhang and Vandenberghe, Lieven},
+	date = {2010-01},
+	note = {Publisher: Society for Industrial and Applied Mathematics},
+	keywords = {90C22, 90C25, 90C51, 93B30, interior-point methods, matrix rank minimization, nuclear norm approximation, semidefinite programming, subspace algorithm, system identification},
+	file = {Liu und Vandenberghe - 2010 - Interior-Point Method for Nuclear Norm Approximati.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/3YWHHGGL/Liu und Vandenberghe - 2010 - Interior-Point Method for Nuclear Norm Approximati.pdf:application/pdf},
+}
+
+@book{bai_matrix_2021,
+	location = {Philadelphia},
+	title = {Matrix Analysis and Computations},
+	isbn = {978-1-61197-662-5},
+	series = {Other Titles in Applied Mathematics},
+	publisher = {Society for Industrial and Applied Mathematics},
+	author = {Bai, Zhong-Zhi and Pan, Jian-Yu},
+	date = {2021-01},
+	doi = {10.1137/1.9781611976632},
+	keywords = {convergence theory, direct method, iteration method, Krylov subspace, linear system, matrix decomposition, matrix splitting, nonnegative matrix theory, numerical range, preconditioning, saddle-point problem},
+}
